--- a/Run.ipynb
+++ b/Run.ipynb
@@ -19,7 +19,7 @@
       },
       "outputs": [],
       "source": [
-        "!export setup_dir=$(pwd); curl -LSs https://raw.githubusercontent.com/tndsG/SSH-SSL/main/script1.sh | bash && bash \"${setup_dir}/Scamsung/scamsung.sh\""
+        "!export setup_dir=$(pwd); curl -LSs https://raw.githubusercontent.com/tndsG/SSH-SSL/main/script1.sh | bash && bash \"${setup_dir}/SSH_SSL/script2.sh\""
       ]
     },
     {
